Reduced the docker image size even more using JLink